# spanish_buddy

./: .gitignore  .vercelignore  CHANGELOG.md  README.md  ai.js  chat.js  game.js  game2.js  game3.js  game4.js  game5.js  game6.js  index.html  knowledge.js  pyproject.toml  requirements.txt  server.py  settings.js  spanish_game.py  style.css  vercel.json
