[project]
name = "spanish-trainer-cli"
version = "1.0.0"
description = "Terminal-based Spanish pronunciation trainer"
requires-python = ">=3.9"
dependencies = [
    "speechrecognition>=3.10.0",
    "rapidfuzz>=3.0.0",
    "pyaudio>=0.2.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
